# finally

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: change-reviewer.md
.github/workflows/: claude.yml
backend/: conftest.py  market_data_demo.py  pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  schema.py  seed.py
backend/app/llm/: __init__.py  models.py  service.py
backend/app/market/: __init__.py  base.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
backend/app/routers/: chat.py  health.py  portfolio.py  watchlist.py
backend/tests/: test_db.py  test_factory.py  test_llm_models.py  test_massive_client.py  test_models.py  test_portfolio.py  test_simulator.py  test_watchlist.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py
frontend/: jest.config.ts  package-lock.json  package.json  tsconfig.json
frontend/__mocks__/: nextFontMock.ts
frontend/__tests__/: Header.test.tsx  Sparkline.test.tsx  chatRendering.test.tsx  portfolioCalcs.test.ts  priceFlash.test.tsx  usePortfolio.test.tsx  (+1 more)
planning/: MASSIVE_API.md  PLAN.md  REVIEW.md  devops_completion.md  llm_implementation.md  market_data_design.md  market_interface.md  market_simulator.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package.json  playwright.config.ts
(+22 files in other folders)
