[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly AI Trading Workstation — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "massive>=1.0.0",
    "litellm>=1.55.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
